# cuda-template

./: .bazelrc  .clang-tidy  .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE.bazel
hello/: BUILD.bazel  hello.cu  hello.hpp  main.cc
test/: BUILD.bazel  hello-test.cc
